test/corpus/map-call.txt
================================================================================
Map Call
================================================================================


stage SQUARE(
    in  float value,
    out float square,
    src comp  "square",
)

stage SUM(
    in  float[] values,
    out float   sum,
    src comp    "sum",
)

pipeline SUM_SQUARES(
    in  float[] values,
    out float   sum,
)
{
    map call SQUARE(
        value = split self.values,
    )

    call SUM(
        values = SQUARE.square,
    )

    return (
        value = SUM.sum,
    )
}

--------------------------------------------------------------------------------

(source_file
  (stage_declaration
    name: (identifier)
    body: (stage_body
      (parameter_list
        (input_parameter
          type: (parameter_type
            (filetype))
          name: (identifier))
        (output_parameter
          type: (parameter_type
            (filetype))
          name: (identifier)))
      (source_declaration
        (source_type)
        source_path: (string))))
  (stage_declaration
    name: (identifier)
    body: (stage_body
      (parameter_list
        (input_parameter
          type: (parameter_type
            (filetype))
          name: (identifier))
        (output_parameter
          type: (parameter_type
            (filetype))
          name: (identifier)))
      (source_declaration
        (source_type)
        source_path: (string))))
  (pipeline_declaration
    name: (identifier)
    (parameter_list
      (input_parameter
        type: (parameter_type
          (filetype))
        name: (identifier))
      (output_parameter
        type: (parameter_type
          (filetype))
        name: (identifier)))
    (call_statement
      name: (identifier)
      (call_body
        (binding_statement
          target: (identifier)
          value: (scoped_identifier
            name: (identifier)))))
    (call_statement
      name: (identifier)
      (call_body
        (binding_statement
          target: (identifier)
          value: (scoped_identifier
            path: (identifier)
            name: (identifier)))))
    (return_statement
      (binding_statement
        target: (identifier)
        value: (scoped_identifier
          path: (identifier)
          name: (identifier))))))
