test/corpus/map.txt
================================================================================
Map type
================================================================================

stage MY_STAGE(
  in map<float[]> v1,
  out map<float>[] v2,
  src comp "blah",
)

--------------------------------------------------------------------------------

(source_file
  (stage_declaration
    name: (identifier)
    body: (stage_body
      (parameter_list
        (input_parameter
          (ERROR
            (parameter_type
              (filetype)))
          type: (parameter_type
            (filetype))
          (ERROR)
          name: (identifier))
        (output_parameter
          (ERROR
            (parameter_type
              (filetype)))
          type: (parameter_type
            (array_type
              (parameter_type
                (filetype))
              (ERROR)))
          name: (identifier)))
      (source_declaration
        (source_type)
        source_path: (string)))))
