test/corpus/pipeline.txt
================================================================================
Pipeline
================================================================================

filetype txt;

stage SORT_ITEMS(
    in  txt  unsorted,
    in  bool case_sensitive,
    out txt  sorted,
    src py   "stages/sort",
)

stage FIND_DUPLICATES(
    in  txt  sorted,
    out txt  duplicates,
    src py   "stages/find_duplicates",
)

pipeline DUPLICATE_FINDER(
    in  txt  unsorted,
    out txt  duplicates,
)
{
    call SORT_ITEMS(
        unsorted = self.unsorted,
    )
    call FIND_DUPLICATES(
        sorted = SORT_ITEMS.sorted,
    )
    return (
        duplicates = FIND_DUPLICATES.duplicates,
    )
}

--------------------------------------------------------------------------------

(source_file
  (filetype_declaration
    (filetype))
  (stage_declaration
    name: (identifier)
    body: (stage_body
      (parameter_list
        (input_parameter
          type: (parameter_type
            (filetype))
          name: (identifier))
        (input_parameter
          type: (parameter_type
            (filetype))
          name: (identifier))
        (output_parameter
          type: (parameter_type
            (filetype))
          name: (identifier)))
      (source_declaration
        (source_type)
        source_path: (string))))
  (stage_declaration
    name: (identifier)
    body: (stage_body
      (parameter_list
        (input_parameter
          type: (parameter_type
            (filetype))
          name: (identifier))
        (output_parameter
          type: (parameter_type
            (filetype))
          name: (identifier)))
      (source_declaration
        (source_type)
        source_path: (string))))
  (pipeline_declaration
    name: (identifier)
    (parameter_list
      (input_parameter
        type: (parameter_type
          (filetype))
        name: (identifier))
      (output_parameter
        type: (parameter_type
          (filetype))
        name: (identifier)))
    (call_statement
      name: (identifier)
      (call_body
        (binding_statement
          target: (identifier)
          value: (scoped_identifier
            name: (identifier)))))
    (call_statement
      name: (identifier)
      (call_body
        (binding_statement
          target: (identifier)
          value: (scoped_identifier
            path: (identifier)
            name: (identifier)))))
    (return_statement
      (binding_statement
        target: (identifier)
        value: (scoped_identifier
          path: (identifier)
          name: (identifier))))))
