test/corpus/stage_split_using.txt
================================================================================
Stage Split Using
================================================================================

stage SUM_SQUARES(
    in  float[] values,
    out float   sum,
    src comp    "sum_squares",
) split (
    in  float   value,
    out float   value,
) using (
    mem_gb  = 4.0,
    threads = -16,
)

--------------------------------------------------------------------------------

(source_file
  (stage_declaration
    name: (identifier)
    body: (stage_body
      (parameter_list
        (input_parameter
          type: (parameter_type
            (array_type
              (parameter_type
                (primitive_type))))
          name: (identifier))
        (output_parameter
          type: (parameter_type
            (primitive_type))
          name: (identifier)))
      (source_declaration
        (source_type)
        source_path: (string)))
    (split_statement
      (parameter_list
        (input_parameter
          type: (parameter_type
            (primitive_type))
          name: (identifier))
        (output_parameter
          type: (parameter_type
            (primitive_type))
          name: (identifier))))
    (using_statement
      body: (using_body
        (using_binding
          resource: (using_binding_resource)
          value: (float))
        (using_binding
          resource: (using_binding_resource)
          value: (integer))))))
